# django-template

./: Makefile  README.md  pyproject.toml  requirements.txt
apps/core/: configs.py-tpl
config/: asgi.py-tpl  settings.py-tpl  urls.py-tpl  wsgi.py-tpl
