[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Jc Din <ozknightwalker62@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.20.0"
django-cors-headers = "^3.8.0"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
